@@ -1302,7 +1302,7 @@
 
 /* Define to the full name and version of this package. */
 #ifndef MAGICKCORE_PACKAGE_STRING
-#define MAGICKCORE_PACKAGE_STRING "ImageMagick 6.7.5-10"
+#define MAGICKCORE_PACKAGE_STRING "ImageMagick 6.7.5-9"
 #endif
 
 /* Define to the one symbol short name of this package. */
@@ -1317,7 +1317,7 @@
 
 /* Define to the version of this package. */
 #ifndef MAGICKCORE_PACKAGE_VERSION
-#define MAGICKCORE_PACKAGE_VERSION "6.7.5-10"
+#define MAGICKCORE_PACKAGE_VERSION "6.7.5-9"
 #endif
 
 /* Define if you have PANGOFT2 library */
@@ -1507,7 +1507,7 @@
 
 /* Version number of package */
 #ifndef MAGICKCORE_VERSION
-#define MAGICKCORE_VERSION "6.7.5-10"
+#define MAGICKCORE_VERSION "6.7.5-9"
 #endif
 
 /* Define if you have WEBP library */
